<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/backMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/userProfile"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_background"
            android:gravity="center"
            android:text="@string/icon_letter"
            android:textSize="52sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="25dp"/>

    <EditText
        android:id="@+id/editUserName"
        style="@style/WhiteBoxEditTextStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:hint="@string/text_hint"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:layout_marginStart="25dp"
        android:textSize="25sp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/editTitle"
        style="@style/WhiteBoxEditTextStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:hint="@string/title_hint"
        android:padding="10dp"/>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:padding="16dp">

        <Button
            android:id="@+id/cancelButton"
            style="@style/WhiteBoxButtonStyle"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/saveButton"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <Button
            android:id="@+id/saveButton"
            style="@style/BlueBoxButtonStyle"
            android:layout_width="165dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:gravity="center"/>
    </RelativeLayout>

</LinearLayout>