<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="3dp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        style="@style/WhiteBoxButtonStyle"
        android:hint="@string/email"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:textSize="22sp"
        android:textAlignment="textStart"
        android:layout_marginBottom="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            style="@style/WhiteBoxButtonStyle"
            android:hint="@string/password"
            android:padding="10dp"
            android:textSize="22sp"
            android:textAlignment="textStart"
            android:inputType="textPassword"/>

        <ImageView
            android:id="@+id/passwordVisibilityToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/passwordEditText"
            android:layout_alignBottom="@+id/passwordEditText"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_visibility_off"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEditText"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="#007bff"
            android:textSize="14sp" />
        
    </RelativeLayout>
    
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:focusable="true"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="12dp"
        android:background="@drawable/box_button"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        
        <TextView
            android:id="@+id/userAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_user_account"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textColor="#007bff"
            android:layout_toEndOf="@+id/userAccount"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="8dp"/>

    </RelativeLayout>

</LinearLayout>