<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fg_password"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        style="@style/WhiteBoxButtonStyle"
        android:hint="@string/email"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:textSize="22sp"
        android:textAlignment="textStart"
        android:layout_marginBottom="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/newPasswordEdit"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            style="@style/WhiteBoxButtonStyle"
            android:hint="@string/new_password"
            android:padding="10dp"
            android:textSize="22sp"
            android:textAlignment="textStart"
            android:inputType="textPassword"/>

        <ImageView
            android:id="@+id/newPasswordToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/newPasswordEdit"
            android:layout_alignBottom="@+id/newPasswordEdit"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_visibility_off"
            android:clickable="true"
            android:focusable="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

    <EditText
        android:id="@+id/confirmPasswordEdit"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        style="@style/WhiteBoxButtonStyle"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:textSize="22sp"
        android:textAlignment="textStart"
        android:inputType="textPassword"/>

    <ImageView
        android:id="@+id/confirmPasswordToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/confirmPasswordEdit"
        android:layout_alignBottom="@+id/confirmPasswordEdit"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:src="@drawable/ic_visibility_off"
        android:clickable="true"
        android:focusable="true" />

    </RelativeLayout>

    <EditText
        android:id="@+id/existingHint"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        style="@style/WhiteBoxButtonStyle"
        android:hint="@string/old_hint"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:textSize="22sp"
        android:textAlignment="textStart"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/newUserHint"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        style="@style/WhiteBoxButtonStyle"
        android:hint="@string/new_hint"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:textSize="22sp"
        android:textAlignment="textStart"
        android:layout_marginBottom="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="10dp">
        
        <Button
            android:id="@+id/resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_alignParentStart="true"
            android:background="@drawable/box_button"/>

        <Button
            android:id="@+id/cancelToCreatePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_fg"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@+id/resetPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/white_box_background"/>

    </RelativeLayout>

</LinearLayout>
