<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/menuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/menuButton"
                android:text="@string/header"
                android:textSize="18sp"
                android:fontFamily="@font/font"/>
            
            <ImageButton
                android:id="@+id/settingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sideNavView"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/profileHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:padding="16dp">

            <TextView
                android:id="@+id/profileIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="@string/profile_icon"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/profileIcon"
                android:text="@string/user_1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userName"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@id/profileIcon"
                android:text="@string/user_title"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/editIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_edit"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/addListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:drawableStart="@drawable/ic_add"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/add_list_name"
            android:textSize="18sp"
            tools:ignore="UseCompatTextViewDrawableXml"/>
        
        <LinearLayout
            android:id="@+id/addLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="16dp">

            <EditText
                android:id="@+id/projectEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_input"/>
            
            <Button
                android:id="@+id/addProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nameListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="1dp" />

        </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/rightSideView"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="end"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
             
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_family"
                android:textSize="15sp"
                android:layout_marginTop="4dp"/>

            <Spinner
                android:id="@+id/fontFamily"
                android:layout_width="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:entries="@array/font_family" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size"
                android:textSize="15sp"
                android:layout_marginTop="4dp"/>

            <Spinner
                android:id="@+id/fontSize"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/font_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_color"
                android:textSize="15sp"
                android:layout_marginTop="4dp"/>

            <Spinner
                android:id="@+id/defaultColor"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/default_color"/>

        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>